合并大厅页面，开发订单弹出页面

--- a/src/main/webapp/WEB-INF/pages/layout/cover.html
+++ b/src/main/webapp/WEB-INF/pages/layout/cover.html
@@ -4,7 +4,7 @@
 
     </style>
 </head>
-<div id="cover" style="display: flex;">
+<div id="cover" style="display: none;">
     <header class="cover-head">
         <h2><span class="bg"></span><span class="text"> 全球实验室运营状态实时监控</span><span class="bg"></span></h2>
     </header>
