--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -100,7 +100,7 @@
                                     <li><a href>研发中心</a></li>
                                     <li><a href>检测中心</a></li>
                                     <li><a href>制造工厂</a></li>
-                                    <li><a href>模块商</a></li>
+                                    <!--<li><a href>模块商</a></li>-->
                                 </ul>
                                 <ul>
                                     <li><a href>冰冷</a></li>
