--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" href="../static/css/labCurve.css">
 <link rel="stylesheet" href="../static/css/centerLab.css">
 ##if(toLabData=='toLabData'){
-<div class="lab" style="">
+<div class="lab">
     ##}else{
-    <div class="lab" style="display: none;">
+    <div class="lab">
         ##}
         <div class="btn-back">
             <span class="icon"></span>
