--- a/src/main/webapp/WEB-INF/pages/layout/left180508_bak.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left180508_bak.html
@@ -1,19 +1,4 @@
-<style>
-    .fromHallMap{
-        display: block!important;
-        position: absolute;
-        width: 107em;
-        height: 100%;
-        left: 0;
-    }
-    .fromHallMap iframe{
-        height: 100%;
-    }
-</style>
-<div class="fromHallMap">
-    <iframe src="${contextPath!}/layout/hallMap" frameborder="0"></iframe>
-</div>
-<div id="l" class="l left3x3" style="flex:0; height: 0;">
+     <div id="l" class="l left3x3">
         <header>
             <span class="mainLogo"></span>
             <h1><a href="${contextPath!}/phm">全球实验室数据中心</a></h1>
