--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -28,7 +28,352 @@
     </nav>
     <div class="main">
         <div class="list">
-            <div class="toCurve"></div>
+            <div class="list-header">
+                <ul>
+                    <li>
+                        <h4>订单总量</h4>
+                        <div class="number">7</div>
+                    </li>
+                    <li>
+                        <h4>待测试</h4>
+                        <div class="number">2</div>
+                    </li>
+                    <li>
+                        <h4>待分配</h4>
+                        <div class="number">3</div>
+                    </li>
+                    <li>
+                        <h4>测试中</h4>
+                        <div class="number">1</div>
+                    </li>
+                    <li>
+                        <h4>已完成</h4>
+                        <div class="number">1</div>
+                    </li>
+                    <li>
+                        <h4>完成率</h4>
+                        <div class="number">89.2%</div>
+                    </li>
+                </ul>
+            </div>
+            <div class="list-body">
+                <div class="item">
+                    <header>
+                        <h4>试验编号：</h4>
+                        <div class="serialNumber">HR20180620A0001</div>
+                        <h4>下单时间：</h4>
+                        <div class="time"><time>2018-06-20 16:41:23</time></div>
+                    </header>
+                    <ul>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="active toCurve">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <header>
+                        <h4>试验编号：</h4>
+                        <div class="serialNumber">HR20180620A0001</div>
+                        <h4>下单时间：</h4>
+                        <div class="time"><time>2018-06-20 16:41:23</time></div>
+                    </header>
+                    <ul>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="active">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <header>
+                        <h4>试验编号：</h4>
+                        <div class="serialNumber">HR20180620A0001</div>
+                        <h4>下单时间：</h4>
+                        <div class="time"><time>2018-06-20 16:41:23</time></div>
+                    </header>
+                    <ul>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="active">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <header>
+                        <h4>试验编号：</h4>
+                        <div class="serialNumber">HR20180620A0001</div>
+                        <h4>下单时间：</h4>
+                        <div class="time"><time>2018-06-20 16:41:23</time></div>
+                    </header>
+                    <ul>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="active">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <header>
+                        <h4>试验编号：</h4>
+                        <div class="serialNumber">HR20180620A0001</div>
+                        <h4>下单时间：</h4>
+                        <div class="time"><time>2018-06-20 16:41:23</time></div>
+                    </header>
+                    <ul>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="active">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <header>
+                        <h4>试验编号：</h4>
+                        <div class="serialNumber">HR20180620A0001</div>
+                        <h4>下单时间：</h4>
+                        <div class="time"><time>2018-06-20 16:41:23</time></div>
+                    </header>
+                    <ul>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="active">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <header>
+                        <h4>试验编号：</h4>
+                        <div class="serialNumber">HR20180620A0001</div>
+                        <h4>下单时间：</h4>
+                        <div class="time"><time>2018-06-20 16:41:23</time></div>
+                    </header>
+                    <ul>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="pass">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li class="active">
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                        <li>
+                            <h4>委托下单</h4>
+                            <div class="name">张某某</div>
+                            <div class="tel">0532-88934887</div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!--<div class="toCurve"></div>-->
         </div>
         <div class="curve" style="display: none">
             <header>
