--- a/src/main/webapp/static/css/hallMap.css
+++ b/src/main/webapp/static/css/hallMap.css
@@ -250,7 +250,9 @@ strong{
     }
     .legend-m ul{
         position: relative;
+        top: 0;
         text-align: center;
+        transition: 300ms;
     }
     .legend-m ul>li{
         display: inline-block;
@@ -282,39 +284,21 @@ strong{
         box-shadow: 0 0 0.0625em;
     }
     .legend{
-        --c-lab1:#00e673;
-        --c-lab2:#ffec3d;
-        --c-lab3:#b37feb;
-        --c-lab4:#ff85c0;
-        --c-line1:#6fc;
-        --c-line2:#0af;
-        --c-line3:#01da92;
-        --c-line4:#0060ff;
-        --c-line5:#00a870;
-        --c-line6:#f93;
-        --c-line7:#f09;
+        --c_lab1:#00e673;
+        --c_lab2:#ffec3d;
+        --c_lab3:#b37feb;
+        --c_lab4:#ff85c0;
+        --c_line1:#6fc;
+        --c_line2:#0af;
+        --c_line3:#01da92;
+        --c_line4:#0060ff;
+        --c_line5:#00a870;
+        --c_line6:#f93;
+        --c_line7:#f09;
     }
-    .legend-m ul:first-of-type>li.active:nth-of-type(1)>a,
-    .legend-m ul:first-of-type>li.active:nth-of-type(1)>a:before{
-        color: var(--c-lab1);
-        background: radial-gradient(circle,var(--c-lab1),rgba(0,0,0,0));
-    }
-    .legend-m ul:first-of-type>li.active:nth-of-type(2)>a,
-    .legend-m ul:first-of-type>li.active:nth-of-type(2)>a:before{
-        color: var(--c-lab2);
-        background: radial-gradient(circle,var(--c-lab2),rgba(0,0,0,0));
-    }
-    .legend-m ul:first-of-type>li.active:nth-of-type(3)>a,
-    .legend-m ul:first-of-type>li.active:nth-of-type(3)>a:before{
-        color: var(--c-lab3);
-        background: radial-gradient(circle,var(--c-lab3),rgba(0,0,0,0));
-    }
-    .legend-m ul:first-of-type>li.active:nth-of-type(4)>a,
-    .legend-m ul:first-of-type>li.active:nth-of-type(4)>a:before{
-        color: var(--c-lab4);
-        background: radial-gradient(circle,var(--c-lab4),rgba(0,0,0,0));
-    }
-    .legend-m ul:first-of-type>li.active>a{
+
+    .legend-m ul:first-of-type>li.active>a,
+    .legend-m ul:last-of-type>li.active>a{
         background: none!important;
     }
     .legend-b>.text{
@@ -323,24 +307,6 @@ strong{
         top: .625em;
     }
 }
-
-
-.legend-m ul>li.active:nth-child(1){
-    color: var(--c-line1);
-}
-.legend-m ul>li.active:nth-child(2){
-    color: var(--c-line2);
-}
-.legend-m ul>li.active:nth-child(3){
-    color: var(--c-line3);
-}
-.legend-m ul>li.active:nth-child(4){
-    color: var(--c-line4);
-}
-。。。
-
-
-
 
 /*全球分布*/
 .distribution{
