--- a/src/main/webapp/static/css/orderPopup.css
+++ b/src/main/webapp/static/css/orderPopup.css
@@ -1,8 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-
 html, body {
     height: 100%;
     display: flex;
@@ -36,75 +36,78 @@ a {
 }
 
 /*左侧菜单*/
-.left-nav {
-    width: 10rem;
-    padding-top: 2rem;
-    background-color: #343333;
+@media all {
+    .left-nav {
+        width: 10rem;
+        padding-top: 2rem;
+        background-color: #343333;
+    }
+
+    .left-nav a {
+        position: relative;
+        display: block;
+        padding: .5rem 1rem .5rem 2.5rem;
+        color: #ddd;
+    }
+    .left-nav > ul > li > a{
+        font-size: .75rem;
+    }
+    .left-nav > ul > li > a:before,
+    .left-nav > ul > li > a:after {
+        content: "";
+        position: absolute;
+        width: .75rem;
+        height: .75rem;
+        background-size: contain;
+        filter: brightness(2);
+    }
+
+    .left-nav > ul > li:nth-of-type(1n) > a:before {
+        background-image: url(../img/3rd/i_menu.png);
+        left: 1.25rem;
+        top: .875rem;
+    }
+
+    .left-nav > ul > li > a:after {
+        top: .875rem;
+        right: 1rem;
+        border: .125rem solid #fff;
+        transform: rotate(45deg) scale(.75);
+        border-right: none;
+        border-bottom: none;
+        transition: all 100ms;
+    }
+
+    .left-nav > ul > li > ul {
+        height: 0;
+        /*max-height: 0;*/
+        overflow: hidden;
+        transition: all 300ms;
+    }
+
+    .left-nav > ul > li.show > a:after {
+        top: .5rem;
+        transform: rotate(225deg) scale(.75);
+    }
+
+    .left-nav > ul > li.show > ul {
+        /*max-height: 100rem;*/
+        /*这个写法是临时的，目前css3还没有合适的办法实现从固定高度到auto的过渡，
+        原因跟计算模式有关，具体等后续版本来解决。实在不行可以用js先获取高度*/
+        height: 9rem;
+    }
+
+    .left-nav > ul > li > ul > li.active,
+    .left-nav > ul > li > ul > li:hover {
+        transition: all 300ms;
+        background-color: #4397f7;
+    }
+
+    .left-nav > ul > li > ul > li > a {
+        font-size: .75rem;
+    }
 }
 
-.left-nav a {
-    position: relative;
-    display: block;
-    padding: .5rem 1rem .5rem 2.5rem;
-    color: #ddd;
-}
-.left-nav > ul > li > a{
-    font-size: .75rem;
-}
-.left-nav > ul > li > a:before,
-.left-nav > ul > li > a:after {
-    content: "";
-    position: absolute;
-    width: .75rem;
-    height: .75rem;
-    background-size: contain;
-    filter: brightness(2);
-}
-
-.left-nav > ul > li:nth-of-type(1n) > a:before {
-    background-image: url(../img/3rd/i_menu.png);
-    left: 1.25rem;
-    top: .875rem;
-}
-
-.left-nav > ul > li > a:after {
-    top: .875rem;
-    right: 1rem;
-    border: .125rem solid #fff;
-    transform: rotate(45deg) scale(.75);
-    border-right: none;
-    border-bottom: none;
-    transition: all 100ms;
-}
-
-.left-nav > ul > li > ul {
-    height: 0;
-    /*max-height: 0;*/
-    overflow: hidden;
-    transition: all 300ms;
-}
-
-.left-nav > ul > li.show > a:after {
-    top: .5rem;
-    transform: rotate(225deg) scale(.75);
-}
-
-.left-nav > ul > li.show > ul {
-    /*max-height: 100rem;*/
-    /*这个写法是临时的，目前css3还没有合适的办法实现从固定高度到auto的过渡，
-    原因跟计算模式有关，具体等后续版本来解决。实在不行可以用js先获取高度*/
-    height: 9rem;
-}
-
-.left-nav > ul > li > ul > li.active,
-.left-nav > ul > li > ul > li:hover {
-    transition: all 300ms;
-    background-color: #4397f7;
-}
-
-.left-nav > ul > li > ul > li > a {
-    font-size: .75rem;
-}
 
 .main {
     flex: 1;
@@ -116,17 +119,126 @@ a {
 
 .main > .list {
     position: relative;
-    background-image: url("../img/3rd/orderPopup_list.jpg");
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    background: #ccc;
     background-size: 100% 100%;
+    overflow-y: auto;
+}
+.list-header{
+    flex: 1;
+}
+.list-header>ul{
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+}
+.list-header>ul>li{
+    flex: 1;
+    padding: .5rem;
+    color: #777;
+    background: #fff;
+}
+.list-header>ul>li~li{
+    margin-left: 1rem;
+}
+.list-header>ul>li>.number{
+    font-size: 2rem;
+    margin-top: .5rem;
+    color: #000;
 }
 
-.toCurve {
+.list-body{
+    flex: 5;
+}
+.list-body>.item{
+    display: flex;
+    margin-top: 1rem;
+    padding: 1rem;
+    font-size: .875rem;
+    background: #fff;
+}
+.list-body>.item>header{
+    flex: 1;
+    color: #777;
+}
+.list-body>.item>header>div {
+    color: #333;
+}
+.list-body>.item>header>h4:last-of-type{
+    margin-top: .5rem;
+}
+.list-body>.item>header>time{
+    margin-top: .25rem;
+}
+.list-body>.item>ul{
+    flex: 5;
+    display: flex;
+    justify-content: space-between;
+}
+.list-body>.item>ul>li{
+    position: relative;
+    color: #999;
+    font-size: .875em;
+    padding-top: 1em;
+}
+.list-body>.item>ul>li:not(.active):not(.pass){
+    filter: grayscale(1);
+}
+.list-body>.item>ul>li>h4{
+    margin-bottom: 1em;
+}
+.list-body>.item>ul>li:before{
+    content: "";
+    text-align: center;
     position: absolute;
-    left: 52%;
-    top: 26%;
-    width: 11%;
-    height: 10%;
-    border: .125rem dashed rgba(255, 127, 0, .6);
+    top: 0.625em;
+    left: -1.75em;
+    width: 1.25em;
+    height: 1.25em;
+    font-size: 1.25em;
+    border-radius: 50%;
+    border: .125em solid #00adef;
+    color: #00adef;
+    background-color: transparent;
+}
+.list-body>.item>ul>li:nth-of-type(1):before{
+    content: "1";
+}
+.list-body>.item>ul>li:nth-of-type(2):before{
+    content: "2";
+}
+.list-body>.item>ul>li:nth-of-type(3):before{
+    content: "3";
+}
+.list-body>.item>ul>li:nth-of-type(4):before{
+    content: "4";
+}
+.list-body>.item>ul>li:nth-of-type(5):before{
+    content: "5";
+}
+.list-body>.item>ul>li:nth-of-type(6):before{
+    content: "6";
+}
+.list-body>.item>ul>li:nth-of-type(7):before{
+    content: "7";
+}
+.list-body>.item>ul>li.pass:before{
+    content: "";
+    width: 1.5em;
+    height: 1.5em;
+    background: url(../img/3rd/i_pass.png) no-repeat;
+    background-size: contain;
+    border: none;
+}
+.list-body>.item>ul>li.active:before{
+    color: #fff;
+    background-color: #00adef;
+}
+.toCurve {
+    outline: .125rem dashed orange;
+    outline-offset: .25em;
     cursor: pointer;
 }
 
