--- a/src/main/webapp/static/phm/css/phm2.css
+++ b/src/main/webapp/static/phm/css/phm2.css
@@ -226,9 +226,9 @@ html,body{
     position: relative;
     top: 0.3em;
     left: 50%;
-    margin-left: -25%;
-    width: 50%;
-    height: 50%;
+    margin-left: -0.6em;
+    width: 1.2em;
+    height: 1.5em;
 }
 
 
@@ -298,7 +298,6 @@ html,body{
 .ContentRightContent>div{
     height: 100%;
 }
-
 /* ======================================右侧 左边部分===================== */
 .rightMiddle{
     width: 68%;
@@ -309,7 +308,6 @@ html,body{
     width: 100%;
 } 
 /* ======================================右侧 右边部分===================== */
-
 .rightRight{
     width: 30%;
     /* background-color: pink; */
@@ -328,51 +326,121 @@ html,body{
     bottom: 15%;
     font-size: 1em
 }
-
 /*四个小图标*/
 .rightRight .rightModPic{
-    padding: 2% 5%;
-    height: 85%;
-}
-.chartBody1{
-    width: 90%;
-    height: 100%;
-    padding: 0 5%;
-}
-.chartBody1>ul{
-    height: 100%;
-}
-.chartBody1>ul>li{
     position: relative;
-    float: left;
-    height: 50%;
-    width: 50%;
+    height: 85%;
+    width: 100%;
+    /* background-color: red; */
 }
-.chartBody1 >ul>li .icon{
-    display: block;
-    width: 70%;
-    height: 70%;
-    margin: 5% 15%;
+.rightPicContentBox{
+    width: 100%;
+    height: 100%;
 }
-.chartBody1 >ul>li:nth-child(1) .icon{
-    background:url("../images/system/detection.png") no-repeat 0 10%;
+.rightPicContentUp{
+    position: relative;
+    height: 56%;
+    width: 60%;
+    margin: 0 auto;
+    background:url("../images/system/r_bj.png") no-repeat;
+    background-size: 100% 100%;
+    
+}
+.rightPicContentBox>div:nth-child(1){
+    height: 8%;
+}
+.rightPicContentDown{
+    height: 30%;
+    width: 100%;
+}
+.rightPicContentUp>div:nth-child(1){
+    position: absolute;
+    width: 15%;
+    height: 20%;
+    top: -9%;
+    left: -15%;
+    background:url("../images/system/gongchang.png") no-repeat;
     background-size: contain;
 }
-.chartBody1 >ul>li:nth-child(2) .icon{
-    background:url("../images/system/factory.png") no-repeat;
+.rightPicContentUp>div:nth-child(2){
+    position: absolute;
+    width: 15%;
+    height: 20%;
+    top: -9%;
+    right: -16%;
+    background:url("../images/system/gongchang.png") no-repeat;
     background-size: contain;
 }
-.chartBody1 >ul>li:nth-child(3) .icon{
-    background:url("../images/system/development.png") no-repeat;
+.rightPicContentUp>div:nth-child(3){
+    position: absolute;
+    width: 15%;
+    height: 20%;
+    top: 50%;
+    left: 50%;
+    margin-left: -7.5%;
+    margin-top: -6%;
+    background:url("../images/system/gongchang.png") no-repeat;
     background-size: contain;
 }
-.chartBody1 >ul>li:nth-child(4) .icon{
-    background:url("../images/system/supplier.png") no-repeat;
+.rightPicContentUp>div:nth-child(4){
+    position: absolute;
+    width: 15%;
+    height: 20%;
+    top: 89%;
+    left: -15%;
+    background:url("../images/system/gongchang.png") no-repeat;
     background-size: contain;
 }
-.chartBody1 >ul>li:nth-child(1) .icon：hover{
-    cursor: pointer;
+.rightPicContentUp>div:nth-child(5){
+    position: absolute;
+    width: 15%;
+    height: 20%;
+    top: 89%;
+    right: -15%;
+    background:url("../images/system/gongchang.png") no-repeat;
+    background-size: contain;
 }
-.chartBody1 >ul>li p{
+.recordscenterTitle{
+    position: relative;
+    top: 120%;
+    left: -64%;
+    width: 6em;
+    height: 7em;
+    /* background-color:red; */
+}
+.recordscenterTitle .biaoti{
+    width: 100%;
+    height: 1.5em;
+}
+.biaoti p{
+    padding-bottom: 0.5em;
     text-align: center;
+    font-size: 1em;
 }
+.news{
+    position: absolute;
+    background:url("../images/system/wenbenkuang.png") no-repeat;
+    background-size: 100% 100%;
+    bottom: 0;
+    width: 6em;
+    height: 5em;
+    /* background-color: blue; */
+    overflow: hidden;
+
+}
+
+.recordscenterTitle .news ul li{
+    padding: 0.3em 0;
+    width: 80%;
+    height: 60px;
+    line-height: 60px;
+    font-size: 0.8em;
+    white-space: nowrap;
+    overflow: hidden;
+    text-align: center;
+    margin: 0 auto;
+}
+/* ================================================= */
+
+
+
