实验室运营翻页未完成

--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -116,7 +116,7 @@
                         <div class="legend-r btn active">
                             <div class="text">实验室</div>
                         </div>
-                        <div class="legend-b">
+                        <div class="legend-b toLabData">
                             <div class="text">进入实验室 &gt;&gt;</div>
                         </div>
                     </div>
