--- a/src/main/webapp/WEB-INF/pages/layout/left180508.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left180508.html
@@ -11,7 +11,7 @@
     }
 </style>
 <div class="fromHallMap">
-    <iframe src="${contextPath!}/layout/hallMap" frameborder="0"></iframe>
+    <iframe src="${contextPath!}/layout/hallMap?bigScreen7x3" frameborder="0"></iframe>
 </div>
 <div id="l" class="l left3x3" style="flex:0; height: 0;">
         <header>
