--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -32,346 +32,78 @@
                 <ul>
                     <li>
                         <h4>订单总量</h4>
-                        <div class="number">7</div>
+                        <div class="number">255</div>
                     </li>
                     <li>
                         <h4>待测试</h4>
-                        <div class="number">2</div>
+                        <div class="number">1</div>
                     </li>
                     <li>
                         <h4>待分配</h4>
-                        <div class="number">3</div>
+                        <div class="number">1</div>
                     </li>
                     <li>
                         <h4>测试中</h4>
-                        <div class="number">1</div>
+                        <div class="number">15</div>
                     </li>
                     <li>
                         <h4>已完成</h4>
-                        <div class="number">1</div>
+                        <div class="number">208</div>
                     </li>
                     <li>
                         <h4>完成率</h4>
-                        <div class="number">89.2%</div>
+                        <div class="number">92.4%</div>
                     </li>
                 </ul>
             </div>
             <div class="list-body">
-                <div class="item">
+                <div class="item"><!-- 1 -->
+                    <button class="evaluation">评价</button>
                     <header>
                         <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180620A0001</div>
+                        <div class="serialNumber">HR20180624101A11001</div>
                         <h4>下单时间：</h4>
-                        <div class="time"><time>2018-06-20 16:41:23</time></div>
+                        <div class="time"><time>2018-6-24  17:09</time></div>
                     </header>
                     <ul>
                         <li class="pass">
                             <h4>委托下单</h4>
-                            <div class="name">张某某</div>
+                            <div class="name">吴贤栋</div>
+                            <div class="tel">13210250532</div>
+                        </li>
+                        <li class="pass">
+                            <h4>样品接收</h4>
+                            <div class="name">李娜</div>
                             <div class="tel">0532-88934887</div>
                         </li>
                         <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
+                            <h4>任务分配</h4>
+                            <div class="name"></div>
+                            <div class="tel"></div>
                         </li>
                         <li class="active toCurve">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
+                            <h4>测试执行</h4>
+                            <div class="name"></div>
+                            <div class="tel"></div>
                         </li>
                         <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
+                            <h4>报告审核</h4>
+                            <div class="name"></div>
+                            <div class="tel"></div>
                         </li>
                         <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
+                            <h4>批准报告</h4>
+                            <div class="name"></div>
+                            <div class="tel"></div>
                         </li>
                         <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
+                            <h4>结果评价</h4>
+                            <div class="name">吴贤栋</div>
+                            <div class="tel">13210250532</div>
                         </li>
                     </ul>
                 </div>
-                <div class="item">
-                    <header>
-                        <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180620A0001</div>
-                        <h4>下单时间：</h4>
-                        <div class="time"><time>2018-06-20 16:41:23</time></div>
-                    </header>
-                    <ul>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="active">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <header>
-                        <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180620A0001</div>
-                        <h4>下单时间：</h4>
-                        <div class="time"><time>2018-06-20 16:41:23</time></div>
-                    </header>
-                    <ul>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="active">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <header>
-                        <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180620A0001</div>
-                        <h4>下单时间：</h4>
-                        <div class="time"><time>2018-06-20 16:41:23</time></div>
-                    </header>
-                    <ul>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="active">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <header>
-                        <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180620A0001</div>
-                        <h4>下单时间：</h4>
-                        <div class="time"><time>2018-06-20 16:41:23</time></div>
-                    </header>
-                    <ul>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="active">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <header>
-                        <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180620A0001</div>
-                        <h4>下单时间：</h4>
-                        <div class="time"><time>2018-06-20 16:41:23</time></div>
-                    </header>
-                    <ul>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="active">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                    </ul>
-                </div>
-                <div class="item">
-                    <header>
-                        <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180620A0001</div>
-                        <h4>下单时间：</h4>
-                        <div class="time"><time>2018-06-20 16:41:23</time></div>
-                    </header>
-                    <ul>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="pass">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li class="active">
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                        <li>
-                            <h4>委托下单</h4>
-                            <div class="name">张某某</div>
-                            <div class="tel">0532-88934887</div>
-                        </li>
-                    </ul>
-                </div>
+
             </div>
             <!--<div class="toCurve"></div>-->
         </div>
@@ -379,8 +111,8 @@
             <header>
                 <div class="close">×</div>
                 <ul class="title">
-                    <li>型号：<span id="center_cpxh_id_world"></span></li>
-                    <li>实验项目：？？？<span id="center_sybh_id_world"></span></li>
+                    <li>型号：C3FE837CMJ<span id="center_cpxh_id_world"></span></li>
+                    <li>实验项目：耗电量<span id="center_sybh_id_world"></span></li>
                 </ul>
                 <ul class="btnGroup">
                     <li class="active">
