--- a/src/main/webapp/static/css/orderPopup.css
+++ b/src/main/webapp/static/css/orderPopup.css
@@ -122,7 +122,7 @@ a {
     display: flex;
     flex-direction: column;
     padding: 1rem;
-    background: #ccc;
+    background: #34373e;
     background-size: 100% 100%;
     overflow-y: auto;
 }
@@ -137,8 +137,8 @@ a {
 .list-header>ul>li{
     flex: 1;
     padding: .5rem;
-    color: #777;
-    background: #fff;
+    color: #fff;
+    background: #1e1e1e;
 }
 .list-header>ul>li~li{
     margin-left: 1rem;
@@ -146,25 +146,27 @@ a {
 .list-header>ul>li>.number{
     font-size: 2rem;
     margin-top: .5rem;
-    color: #000;
+    /*color: #000;*/
 }
 
 .list-body{
     flex: 5;
 }
 .list-body>.item{
+    position: relative;
     display: flex;
     margin-top: 1rem;
     padding: 1rem;
     font-size: .875rem;
-    background: #fff;
+    color: #fff;
+    background: #1e1e1e;
 }
 .list-body>.item>header{
-    flex: 1;
-    color: #777;
+    flex: 1.3;
+    /*color: #777;*/
 }
 .list-body>.item>header>div {
-    color: #333;
+    /*color: #333;*/
 }
 .list-body>.item>header>h4:last-of-type{
     margin-top: .5rem;
@@ -179,21 +181,35 @@ a {
 }
 .list-body>.item>ul>li{
     position: relative;
-    color: #999;
-    font-size: .875em;
-    padding-top: 1em;
+    /*color: #999;*/
+    /*font-size: .875em;*/
+    /*padding-top: 1em;*/
+    width: 100%;
+}
+.list-body>.item>button,
+.list-body>.item>button:active{
+    position: absolute;
+    right: 5em;
+    bottom: 1em;
+    color: orange;
+    background-color: transparent;
+    border: .125em solid orange;
+    padding: .0625em 0.75em;
+    margin-top: .5em;
+    font-size: 1em;
+    border-radius: .25em;
 }
 .list-body>.item>ul>li:not(.active):not(.pass){
     filter: grayscale(1);
 }
 .list-body>.item>ul>li>h4{
-    margin-bottom: 1em;
+    margin-bottom: .5em;
 }
 .list-body>.item>ul>li:before{
     content: "";
     text-align: center;
     position: absolute;
-    top: 0.625em;
+    /*top: 0.625em;*/
     left: -1.75em;
     width: 1.25em;
     height: 1.25em;
@@ -236,9 +252,17 @@ a {
     color: #fff;
     background-color: #00adef;
 }
-.toCurve {
-    outline: .125rem dashed orange;
-    outline-offset: .25em;
+.list-body>.item>ul>li>*{
+    font-size: .875em;
+}
+.toCurve:after {
+    content: '';
+    position: absolute;
+    left: -2.5rem;
+    top: -.5rem;
+    width: 6rem;
+    height: 5rem;
+    border: .125rem dashed orange;
     cursor: pointer;
 }
 
@@ -246,6 +270,7 @@ a {
 .curve{
     display: flex;
     flex-direction: column;
+    background: #34373e;
 }
 .curve .close{
     position: absolute;
@@ -255,6 +280,7 @@ a {
     cursor: pointer;
 }
 .curve>header>ul.title{
+    color: #fff;
     font-size: .875rem;
 }
 .curve>header>ul{
