地图上的样式及去掉数字，PHM加链接，订单页位置

--- a/src/main/webapp/static/css/orderPopup.css
+++ b/src/main/webapp/static/css/orderPopup.css
@@ -272,6 +272,9 @@ a {
     flex-direction: column;
     background: #34373e;
 }
+.curve>header{
+    padding-top: 1rem;
+}
 .curve .close{
     position: absolute;
     top: 3.75rem;
