--- a/src/main/webapp/static/phm/css/phm2.css
+++ b/src/main/webapp/static/phm/css/phm2.css
@@ -364,6 +364,7 @@ html,body{
 .rightPicContentBox{
     width: 100%;
     height: 100%;
+    cursor: pointer;
 }
 .rightPicContentUp{
     position: relative;
